Expand errors to explain their cause
Ref #208
