# generated/restapi/operations/deposit_resource_responses.go
@@ -110,6 +110,11 @@ const DepositResourceUnprocessableEntityCode int = 422
 swagger:response depositResourceUnprocessableEntity
 */
 type DepositResourceUnprocessableEntity struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.ErrorResponse `json:"body,omitempty"`
 }
 
 // NewDepositResourceUnprocessableEntity creates DepositResourceUnprocessableEntity with default headers values
@@ -117,12 +122,27 @@ func NewDepositResourceUnprocessableEntity() *DepositResourceUnprocessableEntity
 	return &DepositResourceUnprocessableEntity{}
 }
 
+// WithPayload adds the payload to the deposit resource unprocessable entity response
+func (o *DepositResourceUnprocessableEntity) WithPayload(payload *models.ErrorResponse) *DepositResourceUnprocessableEntity {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the deposit resource unprocessable entity response
+func (o *DepositResourceUnprocessableEntity) SetPayload(payload *models.ErrorResponse) {
+	o.Payload = payload
+}
+
 // WriteResponse to the client
 func (o *DepositResourceUnprocessableEntity) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
 
-	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
-
 	rw.WriteHeader(422)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
 }
 
 // DepositResourceInternalServerErrorCode is the HTTP code returned for type DepositResourceInternalServerError
