# swagger.json
@@ -43,7 +43,10 @@
             "description": "Unsupported resource type provided. TACO resources should be handed over as JSON or JSON-LD."
           },
           "422": {
-            "description": "The resource JSON provided had an unspecified or unsupported field, or is otherwise unprocessable by TACO."
+            "description": "The resource JSON provided had an unspecified or unsupported field, or is otherwise unprocessable by TACO.",
+            "schema": {
+              "$ref": "#/definitions/ErrorResponse"
+            }
           },
           "500": {
             "description": "This resource could be created at this time by TACO."
@@ -120,7 +123,10 @@
             "description": "Unsupported resource type provided. TACO resources should be handed over as JSON or JSON-LD."
           },
           "422": {
-            "description": "The resource JSON provided had an unspecified or unsupported field, or is otherwise unprocessable by TACO."
+            "description": "The resource JSON provided had an unspecified or unsupported field, or is otherwise unprocessable by TACO.",
+            "schema": {
+              "$ref": "#/definitions/ErrorResponse"
+            }
           },
           "500": {
             "description": "This resource could be updated at this time by TACO."
@@ -355,6 +361,41 @@
       },
       "example": {
         "status": "OK"
+      }
+    },
+    "ErrorResponse": {
+      "type": "object",
+      "properties": {
+        "errors": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/Error"
+          }
+        }
+      }
+    },
+    "Error" : {
+      "type": "object",
+      "properties": {
+        "title": {
+          "type": "string",
+          "description": "a short, human-readable summary of the problem that SHOULD NOT change from occurrence to occurrence of the problem.",
+          "example": "Invalid Attribute"
+        },
+        "detail": {
+          "type": "string",
+          "description": "a human-readable explanation specific to this occurrence of the problem.",
+          "example": "Title must contain at least three characters."
+        },
+        "source": {
+          "type": "object",
+          "properties": {
+            "pointer": {
+              "type": "string",
+              "example": "/data/attributes/title"
+            }
+          }
+        }
       }
     }
   }
